Fix token amount overlap on mobile devices

--- a/resources/scss/_main.scss
+++ b/resources/scss/_main.scss
@@ -1381,6 +1381,7 @@ body.login-page {
       text-align: center;
       margin-bottom: 35px;
       h1{
+        line-height: 110px;
         font-size:120px;
         margin:35px 0;
         letter-spacing:5px;
